test-parser.output
   0  $accept : %entry% $end

   1  program : declarations EOF

   2  declarations :
   3               | declarations var_declaration
   4               | declarations func_declaration

   5  func_declaration : TAG DEFINE ID LPAREN optional_formal_parameters RPAREN LBRACE var_declaration_list stmt_list RBRACE

   6  type : NUMBER
   7       | BOOL
   8       | FLOAT
   9       | CHAR
  10       | STRING

  11  optional_formal_parameters :
  12                             | formal_parameters_list

  13  formal_parameters_list : type ID
  14                         | formal_parameters_list COMMA type ID

  15  var_declaration_list :
  16                       | var_declaration_list var_declaration

  17  var_declaration : TAG DECLARE ID LBRACKET RBRACKET

  18  stmt_list : stmt_list stmt

  19  stmt : expr ENDLINE
  20       | RETURN ENDLINE
  21       | RETURN expr ENDLINE
  22       | TAG LPAREN stmt_list RPAREN
  23       | TAG LBRACE stmt_list RBRACE
  24       | LBRACE stmt_list RBRACE
  25       | IF LPAREN expr RPAREN stmt ELSE stmt
  26       | FOR LPAREN optional_expr SEMI expr SEMI optional_expr RPAREN stmt
  27       | WHILE LPAREN expr RPAREN stmt

  28  optional_expr :
  29                | expr

  30  expr : STRLITERAL
  31       | NUMBER
  32       | FLOAT
  33       | STRING
  34       | TRUE
  35       | FALSE
  36       | TAG VARIABLE
  37       | expr PLUS expr
  38       | expr MINUS expr
  39       | expr TIMES expr
  40       | expr DIVIDE expr
  41       | expr MODULO expr
  42       | expr EQ expr
  43       | expr NEQ expr
  44       | expr LT expr
  45       | expr LEQ expr
  46       | expr GT expr
  47       | expr GEQ expr
  48       | expr AND expr
  49       | expr OR expr
  50       | NOT expr
  51       | expr DECREMENT
  52       | expr INCREMENT
  53       | LPAREN expr RPAREN
  54       | TAG VARIABLE LBRACKET expr RBRACKET
  55       | TAG ID LPAREN option_args RPAREN

  56  option_args :
  57              | args_list

  58  args_list : expr
  59            | args_list COMMA expr

  60  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (60)
	declarations : .  (2)

	.  reduce 2

	program  goto 3
	declarations  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (60)

	.  reduce 60


state 4
	program : declarations . EOF  (1)
	declarations : declarations . var_declaration  (3)
	declarations : declarations . func_declaration  (4)

	TAG  shift 5
	EOF  shift 6
	.  error

	var_declaration  goto 7
	func_declaration  goto 8


state 5
	func_declaration : TAG . DEFINE ID LPAREN optional_formal_parameters RPAREN LBRACE var_declaration_list stmt_list RBRACE  (5)
	var_declaration : TAG . DECLARE ID LBRACKET RBRACKET  (17)

	DEFINE  shift 9
	DECLARE  shift 10
	.  error


state 6
	program : declarations EOF .  (1)

	.  reduce 1


state 7
	declarations : declarations var_declaration .  (3)

	.  reduce 3


state 8
	declarations : declarations func_declaration .  (4)

	.  reduce 4


state 9
	func_declaration : TAG DEFINE . ID LPAREN optional_formal_parameters RPAREN LBRACE var_declaration_list stmt_list RBRACE  (5)

	ID  shift 11
	.  error


state 10
	var_declaration : TAG DECLARE . ID LBRACKET RBRACKET  (17)

	ID  shift 12
	.  error


state 11
	func_declaration : TAG DEFINE ID . LPAREN optional_formal_parameters RPAREN LBRACE var_declaration_list stmt_list RBRACE  (5)

	LPAREN  shift 13
	.  error


state 12
	var_declaration : TAG DECLARE ID . LBRACKET RBRACKET  (17)

	LBRACKET  shift 14
	.  error


state 13
	func_declaration : TAG DEFINE ID LPAREN . optional_formal_parameters RPAREN LBRACE var_declaration_list stmt_list RBRACE  (5)
	optional_formal_parameters : .  (11)

	BOOL  shift 15
	NUMBER  shift 16
	FLOAT  shift 17
	STRING  shift 18
	CHAR  shift 19
	RPAREN  reduce 11

	optional_formal_parameters  goto 20
	type  goto 21
	formal_parameters_list  goto 22


state 14
	var_declaration : TAG DECLARE ID LBRACKET . RBRACKET  (17)

	RBRACKET  shift 23
	.  error


state 15
	type : BOOL .  (7)

	.  reduce 7


state 16
	type : NUMBER .  (6)

	.  reduce 6


state 17
	type : FLOAT .  (8)

	.  reduce 8


state 18
	type : STRING .  (10)

	.  reduce 10


state 19
	type : CHAR .  (9)

	.  reduce 9


state 20
	func_declaration : TAG DEFINE ID LPAREN optional_formal_parameters . RPAREN LBRACE var_declaration_list stmt_list RBRACE  (5)

	RPAREN  shift 24
	.  error


state 21
	formal_parameters_list : type . ID  (13)

	ID  shift 25
	.  error


state 22
	optional_formal_parameters : formal_parameters_list .  (12)
	formal_parameters_list : formal_parameters_list . COMMA type ID  (14)

	COMMA  shift 26
	RPAREN  reduce 12


state 23
	var_declaration : TAG DECLARE ID LBRACKET RBRACKET .  (17)

	.  reduce 17


state 24
	func_declaration : TAG DEFINE ID LPAREN optional_formal_parameters RPAREN . LBRACE var_declaration_list stmt_list RBRACE  (5)

	LBRACE  shift 27
	.  error


state 25
	formal_parameters_list : type ID .  (13)

	.  reduce 13


state 26
	formal_parameters_list : formal_parameters_list COMMA . type ID  (14)

	BOOL  shift 15
	NUMBER  shift 16
	FLOAT  shift 17
	STRING  shift 18
	CHAR  shift 19
	.  error

	type  goto 28


state 27
	func_declaration : TAG DEFINE ID LPAREN optional_formal_parameters RPAREN LBRACE . var_declaration_list stmt_list RBRACE  (5)
	var_declaration_list : .  (15)

	.  reduce 15

	var_declaration_list  goto 29


state 28
	formal_parameters_list : formal_parameters_list COMMA type . ID  (14)

	ID  shift 30
	.  error


state 29
	func_declaration : TAG DEFINE ID LPAREN optional_formal_parameters RPAREN LBRACE var_declaration_list . stmt_list RBRACE  (5)
	var_declaration_list : var_declaration_list . var_declaration  (16)

	TAG  shift 31
	.  error

	var_declaration  goto 32
	stmt_list  goto 33


state 30
	formal_parameters_list : formal_parameters_list COMMA type ID .  (14)

	.  reduce 14


state 31
	var_declaration : TAG . DECLARE ID LBRACKET RBRACKET  (17)

	DECLARE  shift 10
	.  error


state 32
	var_declaration_list : var_declaration_list var_declaration .  (16)

	.  reduce 16


state 33
	func_declaration : TAG DEFINE ID LPAREN optional_formal_parameters RPAREN LBRACE var_declaration_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (18)

	LPAREN  shift 34
	LBRACE  shift 35
	RBRACE  shift 36
	TAG  shift 37
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	RETURN  shift 44
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	stmt  goto 49
	expr  goto 50


state 34
	expr : LPAREN . expr RPAREN  (53)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 52


state 35
	stmt : LBRACE . stmt_list RBRACE  (24)


	stmt_list  goto 53


state 36
	func_declaration : TAG DEFINE ID LPAREN optional_formal_parameters RPAREN LBRACE var_declaration_list stmt_list RBRACE .  (5)

	.  reduce 5


state 37
	stmt : TAG . LPAREN stmt_list RPAREN  (22)
	stmt : TAG . LBRACE stmt_list RBRACE  (23)
	expr : TAG . VARIABLE  (36)
	expr : TAG . VARIABLE LBRACKET expr RBRACKET  (54)
	expr : TAG . ID LPAREN option_args RPAREN  (55)

	LPAREN  shift 54
	LBRACE  shift 55
	VARIABLE  shift 56
	ID  shift 57
	.  error


state 38
	expr : NOT . expr  (50)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 58


state 39
	expr : TRUE .  (34)

	.  reduce 34


state 40
	expr : FALSE .  (35)

	.  reduce 35


state 41
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (25)

	LPAREN  shift 59
	.  error


state 42
	stmt : FOR . LPAREN optional_expr SEMI expr SEMI optional_expr RPAREN stmt  (26)

	LPAREN  shift 60
	.  error


state 43
	stmt : WHILE . LPAREN expr RPAREN stmt  (27)

	LPAREN  shift 61
	.  error


state 44
	stmt : RETURN . ENDLINE  (20)
	stmt : RETURN . expr ENDLINE  (21)

	ENDLINE  shift 62
	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 63


state 45
	expr : NUMBER .  (31)

	.  reduce 31


state 46
	expr : FLOAT .  (32)

	.  reduce 32


state 47
	expr : STRING .  (33)

	.  reduce 33


state 48
	expr : STRLITERAL .  (30)

	.  reduce 30


state 49
	stmt_list : stmt_list stmt .  (18)

	.  reduce 18


state 50
	stmt : expr . ENDLINE  (19)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . DECREMENT  (51)
	expr : expr . INCREMENT  (52)

	ENDLINE  shift 64
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MODULO  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DECREMENT  shift 78
	INCREMENT  shift 79
	.  error


state 51
	expr : TAG . VARIABLE  (36)
	expr : TAG . VARIABLE LBRACKET expr RBRACKET  (54)
	expr : TAG . ID LPAREN option_args RPAREN  (55)

	VARIABLE  shift 56
	ID  shift 57
	.  error


state 52
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . DECREMENT  (51)
	expr : expr . INCREMENT  (52)
	expr : LPAREN expr . RPAREN  (53)

	RPAREN  shift 80
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MODULO  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DECREMENT  shift 78
	INCREMENT  shift 79
	.  error


state 53
	stmt_list : stmt_list . stmt  (18)
	stmt : LBRACE stmt_list . RBRACE  (24)

	LPAREN  shift 34
	LBRACE  shift 35
	RBRACE  shift 81
	TAG  shift 37
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	RETURN  shift 44
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	stmt  goto 49
	expr  goto 50


state 54
	stmt : TAG LPAREN . stmt_list RPAREN  (22)


	stmt_list  goto 82


state 55
	stmt : TAG LBRACE . stmt_list RBRACE  (23)


	stmt_list  goto 83


state 56
	expr : TAG VARIABLE .  (36)
	expr : TAG VARIABLE . LBRACKET expr RBRACKET  (54)

	LBRACKET  shift 84
	SEMI  reduce 36
	COMMA  reduce 36
	ENDLINE  reduce 36
	RPAREN  reduce 36
	RBRACKET  reduce 36
	PLUS  reduce 36
	MINUS  reduce 36
	TIMES  reduce 36
	DIVIDE  reduce 36
	MODULO  reduce 36
	EQ  reduce 36
	NEQ  reduce 36
	LT  reduce 36
	LEQ  reduce 36
	GT  reduce 36
	GEQ  reduce 36
	AND  reduce 36
	OR  reduce 36
	DECREMENT  reduce 36
	INCREMENT  reduce 36


state 57
	expr : TAG ID . LPAREN option_args RPAREN  (55)

	LPAREN  shift 85
	.  error


state 58
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : NOT expr .  (50)
	expr : expr . DECREMENT  (51)
	expr : expr . INCREMENT  (52)

	DECREMENT  shift 78
	INCREMENT  shift 79
	SEMI  reduce 50
	COMMA  reduce 50
	ENDLINE  reduce 50
	RPAREN  reduce 50
	RBRACKET  reduce 50
	PLUS  reduce 50
	MINUS  reduce 50
	TIMES  reduce 50
	DIVIDE  reduce 50
	MODULO  reduce 50
	EQ  reduce 50
	NEQ  reduce 50
	LT  reduce 50
	LEQ  reduce 50
	GT  reduce 50
	GEQ  reduce 50
	AND  reduce 50
	OR  reduce 50


state 59
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (25)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 86


state 60
	stmt : FOR LPAREN . optional_expr SEMI expr SEMI optional_expr RPAREN stmt  (26)
	optional_expr : .  (28)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	SEMI  reduce 28

	expr  goto 87
	optional_expr  goto 88


state 61
	stmt : WHILE LPAREN . expr RPAREN stmt  (27)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 89


state 62
	stmt : RETURN ENDLINE .  (20)

	.  reduce 20


state 63
	stmt : RETURN expr . ENDLINE  (21)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . DECREMENT  (51)
	expr : expr . INCREMENT  (52)

	ENDLINE  shift 90
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MODULO  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DECREMENT  shift 78
	INCREMENT  shift 79
	.  error


state 64
	stmt : expr ENDLINE .  (19)

	.  reduce 19


state 65
	expr : expr PLUS . expr  (37)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 91


state 66
	expr : expr MINUS . expr  (38)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 92


state 67
	expr : expr TIMES . expr  (39)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 93


state 68
	expr : expr DIVIDE . expr  (40)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 94


state 69
	expr : expr MODULO . expr  (41)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 95


state 70
	expr : expr EQ . expr  (42)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 96


state 71
	expr : expr NEQ . expr  (43)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 97


state 72
	expr : expr LT . expr  (44)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 98


state 73
	expr : expr LEQ . expr  (45)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 99


state 74
	expr : expr GT . expr  (46)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 100


state 75
	expr : expr GEQ . expr  (47)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 101


state 76
	expr : expr AND . expr  (48)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 102


state 77
	expr : expr OR . expr  (49)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 103


state 78
	expr : expr DECREMENT .  (51)

	.  reduce 51


state 79
	expr : expr INCREMENT .  (52)

	.  reduce 52


state 80
	expr : LPAREN expr RPAREN .  (53)

	.  reduce 53


state 81
	stmt : LBRACE stmt_list RBRACE .  (24)

	.  reduce 24


state 82
	stmt_list : stmt_list . stmt  (18)
	stmt : TAG LPAREN stmt_list . RPAREN  (22)

	LPAREN  shift 34
	RPAREN  shift 104
	LBRACE  shift 35
	TAG  shift 37
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	RETURN  shift 44
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	stmt  goto 49
	expr  goto 50


state 83
	stmt_list : stmt_list . stmt  (18)
	stmt : TAG LBRACE stmt_list . RBRACE  (23)

	LPAREN  shift 34
	LBRACE  shift 35
	RBRACE  shift 105
	TAG  shift 37
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	RETURN  shift 44
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	stmt  goto 49
	expr  goto 50


state 84
	expr : TAG VARIABLE LBRACKET . expr RBRACKET  (54)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	.  error

	expr  goto 106


state 85
	expr : TAG ID LPAREN . option_args RPAREN  (55)
	option_args : .  (56)

	LPAREN  shift 34
	TAG  shift 51
	NOT  shift 38
	TRUE  shift 39
	FALSE  shift 40
	NUMBER  shift 45
	FLOAT  shift 46
	STRING  shift 47
	STRLITERAL  shift 48
	RPAREN  reduce 56

	expr  goto 107
	option_args  goto 108
	args_list  goto 109


state 86
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (25)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . DECREMENT  (51)
	expr : expr . INCREMENT  (52)

	RPAREN  shift 110
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MODULO  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DECREMENT  shift 78
	INCREMENT  shift 79
	.  error


state 87
	optional_expr : expr .  (29)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . DECREMENT  (51)
	expr : expr . INCREMENT  (52)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MODULO  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DECREMENT  shift 78
	INCREMENT  shift 79
	SEMI  reduce 29
	RPAREN  reduce 29


state 88
	stmt : FOR LPAREN optional_expr . SEMI expr SEMI optional_expr RPAREN stmt  (26)

	SEMI  shift 111
	.  error


state 89
	stmt : WHILE LPAREN expr . RPAREN stmt  (27)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . DECREMENT  (51)
	expr : expr . INCREMENT  (52)

	RPAREN  shift 112
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MODULO  shift 69
	EQ  shift 70
	NEQ  shift 71
	LT  shift 72
	LEQ  shift 73
	GT  shift 74
	GEQ  shift 75
	AND  shift 76
	OR  shift 77
	DECREMENT  shift 78
	INCREMENT  shift 79
	.  error


state 90
	stmt : RETURN expr ENDLINE .  (21)

	.  reduce 21


state 91
	expr : expr . PLUS expr  (37)
	expr : expr PLUS expr .  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . DECREMENT  (51)
	expr : expr . INCREMENT  (52)
